--- a/tests/fixtures/my.cnf
+++ b/tests/fixtures/my.cnf
@@ -8,4 +8,11 @@ host = 127.0.0.1
 password =
 database = test_pymysql
 socket = /var/run/mysqld/mysqld.sock
-default-character-se = utf8
+default-character-set = utf8
+
+[client_with_unix_socket]
+user = root
+password =
+database = test_pymysql
+socket = /var/run/mysqld/mysqld.sock
+default-character-set = utf8
