--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ python:
     - 3.3
     - 3.4
 
+env:
+    matrix:
+        - PYTHONASYNCIODEBUG=1
+        - PYTHONASYNCIODEBUG=0
+
 before_script:
     - "mysql -e 'DROP DATABASE IF EXISTS test_pymysql; create database test_pymysql  DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci;'"
     - "mysql -e 'DROP DATABASE IF EXISTS test_pymysql2; create database test_pymysql2 DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci;'"
