--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,36 @@ env:
         - PYTHONASYNCIODEBUG=1
         - PYTHONASYNCIODEBUG=0
 
+matrix:
+   include:
+        - python: 3.3
+          env: PYTHONASYNCIODEBUG=1
+          addons:
+              mariadb: 5.5
+        - python: 3.4
+          env: PYTHONASYNCIODEBUG=0
+          addons:
+              mariadb: 5.5
+        - python: 3.4
+          env: PYTHONASYNCIODEBUG=1
+          addons:
+              mariadb: 10.0
+        - python: 3.3
+          env: PYTHONASYNCIODEBUG=0
+          addons:
+              mariadb: 10.0
+        - python: 3.3
+          env: PYTHONASYNCIODEBUG=1
+          addons:
+              mariadb: 10.1
+        - python: 3.4
+          env: PYTHONASYNCIODEBUG=0
+          addons:
+              mariadb: 10.1
+
+
 before_script:
+    - "mysql -e 'SELECT VERSION()'"
     - "mysql -e 'DROP DATABASE IF EXISTS test_pymysql; create database test_pymysql  DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci;'"
     - "mysql -e 'DROP DATABASE IF EXISTS test_pymysql2; create database test_pymysql2 DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci;'"
 
