--- a/.travis.yml
+++ b/.travis.yml
@@ -44,10 +44,7 @@ before_script:
     - "mysql -e 'DROP DATABASE IF EXISTS test_pymysql2; create database test_pymysql2 DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci;'"
 
 install:
-    - pip install flake8
-    - pip install sqlalchemy
-    - pip install nose
-    - pip install coverage
+    - pip install -Ur requirements-dev.txt
     - pip install .
     - pip install coveralls
 
