--- a/.travis.yml
+++ b/.travis.yml
@@ -39,9 +39,9 @@ matrix:
 
 
 before_script:
-    - "mysql -e 'SELECT VERSION()'"
-    - "mysql -e 'DROP DATABASE IF EXISTS test_pymysql; create database test_pymysql  DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci;'"
-    - "mysql -e 'DROP DATABASE IF EXISTS test_pymysql2; create database test_pymysql2 DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci;'"
+    - "mysql -S /var/run/mysqld/mysqld.sock -e 'SELECT VERSION()'"
+    - "mysql -S /var/run/mysqld/mysqld.sock -e 'DROP DATABASE IF EXISTS test_pymysql; create database test_pymysql  DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci;'"
+    - "mysql -S /var/run/mysqld/mysqld.sock -e 'DROP DATABASE IF EXISTS test_pymysql2; create database test_pymysql2 DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci;'"
 
 install:
     - pip install -Ur requirements-dev.txt
