Update docker-compose configuration to run test localy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 mysql:
     image: mysql:5.7
     environment:
-        - MYSQL_USER=aiomysql
-        - MYSQL_PASSWORD=mypass
-        - MYSQL_DATABASE=test_pymysql
-        - MYSQL_ROOT_PASSWORD=mypass
+        - MYSQL_ALLOW_EMPTY_PASSWORD=1
     ports:
         - 3306:3306
     volumes:
-        - /tmp/aiomysql:/var/run/mysqld/
+        - /tmp/aiomysql/:/var/run/mysqld/
+        - ./.docker/:/docker-entrypoint-initdb.d/
+        - ./.docker/my.cnf:/etc/my.cnf
