--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,6 +5,8 @@ ipython==6.1.0
 pytest==3.4.0
 pytest-cov==2.5.1
 pytest-sugar==0.9.1
+PyMySQL>=0.7.5
+docker==3.1.4
 sphinx==1.6.5
 sphinxcontrib-asyncio==0.2.0
 sqlalchemy==1.2.4
