Added docker to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ env:
         - PYTHONASYNCIODEBUG=1
         - PYTHONASYNCIODEBUG=
 
+services:
+    - docker
+
 matrix:
    include:
         - python: 3.6
