Added docker fixtures for future testcases

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,6 +5,8 @@ ipython==6.2.1
 pytest==3.4.2
 pytest-cov==2.5.1
 pytest-sugar==0.9.1
+PyMySQL>=0.7.5
+docker==3.1.4
 sphinx==1.7.1
 sphinxcontrib-asyncio==0.2.0
 sqlalchemy==1.2.5
