--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: python
 python:
     - 3.5.3
     - 3.6
+    - 3.7
 
 env:
     matrix:
@@ -28,6 +29,18 @@ matrix:
               mariadb: 10.1
         - python: 3.6
           env: PYTHONASYNCIODEBUG=
+          addons:
+              mysql: 5.7
+        - python: 3.7
+          dist: xenial
+          sudo: true
+          env: PYTHONASYNCIODEBUG=1
+          addons:
+              mariadb: 10.1
+        - python: 3.7
+          dist: xenial
+          sudo: true
+          env: PYTHONASYNCIODEBUG=1
           addons:
               mysql: 5.7
 
