--- a/.travis.yml
+++ b/.travis.yml
@@ -17,19 +17,15 @@ matrix:
         - python: 3.6
           env: PYTHONASYNCIODEBUG=
           addons:
-              mariadb: 5.5
+              mariadb: '5.5'
         - python: 3.6
           env: PYTHONASYNCIODEBUG=1
           addons:
-              mariadb: 10.0
+              mariadb: '10.0'
         - python: 3.6
           env: PYTHONASYNCIODEBUG=
           addons:
-              mariadb: 10.1
-        - python: 3.6
-          env: PYTHONASYNCIODEBUG=
-          addons:
-              mysql: 5.7
+              mariadb: '10.1'
 
 
 before_script:
