--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,13 +1,13 @@
-coverage==4.5.1
-flake8==3.5.0
-ipdb==0.11
-ipython==7.0.1
-pytest==3.9.1
-pytest-cov==2.6.0
-pytest-sugar==0.9.1
-PyMySQL>=0.9,<=0.9.2
-docker==3.5.1
-sphinx==1.8.1
+coverage>=4.5.1,<=5.1
+flake8>=3.5.0,<=3.7.9
+ipdb>=0.11,<=0.13.2
+ipython>=7.0.1,<=7.13.0
+pytest>=3.9.1,<=5.4.1
+pytest-cov>=2.6.0,<=2.8.1
+pytest-sugar>=0.9.1,<=0.9.3
+PyMySQL>=0.9,<=0.9.3
+docker>=3.5.1,<=4.2.0
+sphinx>=1.8.1, <=3.0.3
 sphinxcontrib-asyncio==0.2.0
-sqlalchemy==1.2.12
-uvloop==0.11.2; python_version >= '3.5'
+sqlalchemy>1.2.12,<=1.3.16
+uvloop>=0.11.2,<=0.14.0; python_version >= '3.5'
