--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,8 +2,12 @@ version: 2
 updates:
 - package-ecosystem: pip
   directory: "/"
+  schedule:
+    interval: daily
   open-pull-requests-limit: 10
   target-branch: master
 - package-ecosystem: github-actions
   directory: /
+  schedule:
+    interval: daily
   open-pull-requests-limit: 10
