--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,6 +37,14 @@ jobs:
           key: pip-lint
           path: ${{ steps.pip-cache.outputs.dir }}
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade --requirement requirements-dev.txt
+
+      - name: Run pyroma
+        run: |
+          python -m pyroma --min 10 --directory .
+
       - name: flake8 Lint
         uses: py-actions/flake8@v2.0.0
         with:
