--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           - '3.8'
           - '3.9'
           - '3.10'
-          # - '3.11.0-alpha.4'
+          - '3.11-dev'
         db:
           - [mysql, '5.7']
           - [mysql, '8.0']
