--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,5 +8,5 @@ PyMySQL>=1.0.0,<=1.0.2
 sphinx>=1.8.1, <4.4.1
 sphinxcontrib-asyncio==0.3.0
 sqlalchemy>1.2.12,<=1.3.16
-uvloop==0.16.0; python_version < '3.11'
+uvloop==0.16.0
 pyroma==3.2
