Implement release workflow in GitHub actions
- heavily based on @webknjaz's work on https://github.com/cherrypy/cheroot/blob/b2c619f3e60682b9405a87cea48e8d30801b6048/.github/workflows/ci-cd.yml
- create package before running tests, run tests against same package that will be published
- run nightly tests
- publish package to test pypi for commits to master
- publish package to pypi using workflow_dispatch
- create github tag and release after successful tests on workflow_dispatch
- packaging version is set from `setuptools-scm`
- self-reported `__version__` is dynamically determined using `pkg_resources`
- pyroma is removed due to incompatibilities with `setuptools-scm`: https://github.com/regebro/pyroma/issues/69

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,10 @@
-include LICENSE
-include CHANGES.txt
-include README.rst
-graft aiomysql
 global-exclude *.pyc *.swp
+exclude .coveragerc
+exclude .flake8
+exclude .github
+exclude .gitignore
+exclude docker-compose.yml
+exclude docs
+exclude examples
+exclude requirements-dev.txt
+exclude tests
