--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,11 @@
 name = aiomysql
 url = https://github.com/aio-libs/aiomysql
 download_url = https://pypi.python.org/pypi/aiomysql
+project_urls =
+  CI: GitHub = https://github.com/aio-libs/aiomysql/actions
+  Docs: RTD = https://aiomysql.readthedocs.io/
+  GitHub: issues = https://github.com/aio-libs/aiomysql/issues
+  GitHub: repo = https://github.com/aio-libs/aiomysql
 description = MySQL driver for asyncio.
 author = Nikolay Novik
 author_email = nickolainovik@gmail.com
@@ -29,10 +34,12 @@ platforms =
   POSIX
 
 [options]
+use_scm_version = True
 python_requires = >=3.7
 include_package_data = True
 
-# runtime requirements
+packages = find:
+
 install_requires =
   PyMySQL>=1.0
 
@@ -41,3 +48,8 @@ sa =
   sqlalchemy>=1.0,<1.4
 rsa =
   PyMySQL[rsa]>=1.0
+
+[options.packages.find]
+exclude =
+  tests
+  tests.*
