Add project URLs to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,12 @@
 name = aiomysql
 url = https://github.com/aio-libs/aiomysql
 download_url = https://pypi.python.org/pypi/aiomysql
+project_urls =
+  CI: GitHub = https://github.com/aio-libs/aiomysql/actions
+  Docs: RTD = https://aiomysql.readthedocs.io/
+  GitHub: repo = https://github.com/aio-libs/aiomysql
+  GitHub: issues = https://github.com/aio-libs/aiomysql/issues
+  GitHub: discussions = https://github.com/aio-libs/aiomysql/discussions
 description = MySQL driver for asyncio.
 author = Nikolay Novik
 author_email = nickolainovik@gmail.com
