--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = aiomysql
+version = attr: aiomysql.__version__
 url = https://github.com/aio-libs/aiomysql
 download_url = https://pypi.python.org/pypi/aiomysql
 project_urls =
@@ -9,6 +10,8 @@ project_urls =
   GitHub: issues = https://github.com/aio-libs/aiomysql/issues
   GitHub: discussions = https://github.com/aio-libs/aiomysql/discussions
 description = MySQL driver for asyncio.
+long_description = file: README.rst, CHANGES.txt
+long_description_content_type = text/x-rst
 author = Nikolay Novik
 author_email = nickolainovik@gmail.com
 classifiers =
@@ -38,6 +41,8 @@ platforms =
 python_requires = >=3.7
 include_package_data = True
 
+packages = find:
+
 # runtime requirements
 install_requires =
   PyMySQL>=1.0
@@ -47,3 +52,8 @@ sa =
   sqlalchemy>=1.0,<1.4
 rsa =
   PyMySQL[rsa]>=1.0
+
+[options.packages.find]
+exclude =
+  tests
+  tests.*
