Use setuptools-scm for versioning
- generate aiomysql/_scm_version.py at build time, fallback to `unknown` if it doesn't exist
- include setuptools-scm-git-archive to support versioning in archives from git tags
- install aiomysql package in readthedocs and access generated version to embed in docs

Split from #734, including suggestions from @webknjaz

Co-authored-by: Sviatoslav Sydorenko <wk@sydorenko.org.ua>

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,5 +19,7 @@ formats:
 - epub
 
 python:
-   install:
-   - requirements: requirements-dev.txt
+  install:
+  - requirements: requirements-dev.txt
+  - method: pip
+    path: .
