remove aiomysql source folder during tests to avoid accidentally using it, as we want to test the installed wheel

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -508,6 +508,10 @@ jobs:
       with:
         ref: ${{ github.event.inputs.release-commitish }}
 
+    - name: Remove aiomysql source to avoid accidentally using it
+      run: >-
+        rm -rf aiomysql
+
     - name: Download all the dists
       uses: actions/download-artifact@v2
       with:
