--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -611,6 +611,7 @@ jobs:
       timeout-minutes: 6
 
     - name: Upload coverage
+      if: ${{ github.event_name != 'schedule' }}
       uses: codecov/codecov-action@v3.1.0
       with:
         file: ./coverage.xml
