Create .codecov.yml, delay coverage notifications until reports from all matrix jobs have been received

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -398,6 +398,8 @@ jobs:
     - build
     - pre-setup  # transitive, for accessing settings
     strategy:
+      # when updating matrix jobs make sure to adjust the expected reports in
+      # codecov.notify.after_n_builds in .codecov.yml
       matrix:
         # service containers are only supported on ubuntu currently
         os:
