ci: actually update pip in CI pipeline instead of just pretending to

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -505,6 +505,7 @@ jobs:
         python -m
         pip install
         --user
+        --upgrade
         pip
 
     - name: Grab the source from Git
