--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,5 +8,5 @@ PyMySQL==1.0.2
 sphinx>=1.8.1, <5.1.2
 sphinxcontrib-asyncio==0.3.0
 SQLAlchemy==1.3.24
-uvloop==0.16.0; python_version < '3.11'
+uvloop==0.17.0
 twine==4.0.1
