--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,8 +6,11 @@ pytest==7.3.2
 pytest-cov==4.1.0
 pytest-sugar==0.9.7
 PyMySQL==1.0.3
-sphinx>=6.2.0, <9.0.0
-sphinxcontrib-asyncio==0.3.0
 SQLAlchemy==1.3.24
 uvloop==0.21.0
 twine==6.2.0
+
+# docs
+sphinx==8.2.3
+furo==2025.7.19
+sphinx-copybutton==0.5.2
