--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
 [build-system]
 requires = [
     # Essentials
-    "setuptools >= 42",
+    "setuptools >= 45",
 
     # Plugins
-    "setuptools_scm[toml] >= 6.4, < 7",
-    "setuptools_scm_git_archive >= 1.1",
+    "setuptools_scm[toml] >= 7.0.5",
 ]
 build-backend = "setuptools.build_meta"
 
