--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,6 +46,7 @@ jobs:
       run:
         shell: python
     outputs:
+      dists-artifact-name: python-package-distributions
       dist-version: >-
         ${{
             steps.request-check.outputs.release-requested == 'true'
@@ -58,8 +59,8 @@ jobs:
         ${{
             steps.request-check.outputs.release-requested || false
         }}
-      cache-key-files: >-
-        ${{ steps.calc-cache-key-files.outputs.files-hash-key }}
+      cache-key-for-dep-files: >-
+        ${{ steps.calc-cache-key-files.outputs.cache-key-for-dep-files }}
       git-tag: ${{ steps.git-tag.outputs.tag }}
       sdist-artifact-name: ${{ steps.artifact-name.outputs.sdist }}
       wheel-artifact-name: ${{ steps.artifact-name.outputs.wheel }}
@@ -96,56 +97,28 @@ jobs:
         fetch-depth: 0
         ref: ${{ github.event.inputs.release-commitish }}
     - name: >-
-        Calculate Python interpreter version hash value
-        for use in the cache key
-      if: >-
-        steps.request-check.outputs.release-requested != 'true'
-      id: calc-cache-key-py
-      run: |
-        from hashlib import sha512
-        from os import environ
-        from sys import version
-        hash = sha512(version.encode()).hexdigest()
-        with open(environ['GITHUB_OUTPUT'], mode='a') as github_output:
-            print(f'py-hash-key={hash}', file=github_output)
-    - name: >-
         Calculate dependency files' combined hash value
         for use in the cache key
       if: >-
         steps.request-check.outputs.release-requested != 'true'
       id: calc-cache-key-files
       run: >-
-        echo "files-hash-key=${{
+        echo "cache-key-for-dep-files=${{
             hashFiles(
-                'requirements-dev.txt',
+                'pyproject.toml',
                 'setup.cfg',
-                'pyproject.toml'
+                'requirements-dev.txt',
+                '.pre-commit-config.yaml'
             )
         }}" >> "$GITHUB_OUTPUT"
-      shell: bash
-    - name: Get pip cache dir
-      id: pip-cache-dir
-      if: >-
-        steps.request-check.outputs.release-requested != 'true'
-      run: >-
-        echo "dir=$(python -m pip cache dir)" >> "$GITHUB_OUTPUT"
       shell: bash
     - name: Set up pip cache
       if: >-
         steps.request-check.outputs.release-requested != 'true'
-      uses: actions/cache@v3.3.1
+      uses: re-actors/cache-python-deps@810325a232f2a28ea124dfba85c7c72fd1774b38 # v1.0.0
       with:
-        path: ${{ steps.pip-cache-dir.outputs.dir }}
-        key: >-
-          ${{ runner.os }}-pip-${{
-          steps.calc-cache-key-py.outputs.py-hash-key }}-${{
-          steps.calc-cache-key-files.outputs.files-hash-key }}
-        restore-keys: |
-          ${{ runner.os }}-pip-${{
-              steps.calc-cache-key-py.outputs.py-hash-key
-          }}-
-          ${{ runner.os }}-pip-
-          ${{ runner.os }}-
+        cache-key-for-dependency-files: >-
+          ${{ steps.calc-cache-key-files.outputs.cache-key-for-dep-files }}
     - name: Drop Git tags from HEAD for non-release requests
       if: >-
         steps.request-check.outputs.release-requested != 'true'
@@ -162,7 +135,7 @@ jobs:
         pip install
         --user
         --upgrade
-        setuptools-scm
+        "setuptools-scm>= 7, < 8"
       shell: bash
     - name: Set the current dist version from Git
       if: steps.request-check.outputs.release-requested != 'true'
@@ -231,35 +204,11 @@ jobs:
       with:
         python-version: >-
           3.10
-    - name: >-
-        Calculate Python interpreter version hash value
-        for use in the cache key
-      id: calc-cache-key-py
-      run: |
-        from hashlib import sha512
-        from os import environ
-        from sys import version
-        hash = sha512(version.encode()).hexdigest()
-        with open(environ['GITHUB_OUTPUT'], mode='a') as github_output:
-            print(f'py-hash-key={hash}', file=github_output)
-      shell: python
-    - name: Get pip cache dir
-      id: pip-cache-dir
-      run: >-
-        echo "dir=$(python -m pip cache dir)" >> "$GITHUB_OUTPUT"
     - name: Set up pip cache
-      uses: actions/cache@v3.3.1
+      uses: re-actors/cache-python-deps@810325a232f2a28ea124dfba85c7c72fd1774b38 # v1.0.0
       with:
-        path: ${{ steps.pip-cache-dir.outputs.dir }}
-        key: >-
-          ${{ runner.os }}-pip-${{
-          steps.calc-cache-key-py.outputs.py-hash-key }}-${{
-          needs.pre-setup.outputs.cache-key-files }}
-        restore-keys: |
-          ${{ runner.os }}-pip-${{
-              steps.calc-cache-key-py.outputs.py-hash-key
-          }}-
-          ${{ runner.os }}-pip-
+        cache-key-for-dependency-files: >-
+          ${{ needs.pre-setup.outputs.cache-key-for-dep-files }}
     - name: Install build tools
       run: >-
         python -m
@@ -307,9 +256,10 @@ jobs:
         'dist/${{ needs.pre-setup.outputs.sdist-artifact-name }}'
         'dist/${{ needs.pre-setup.outputs.wheel-artifact-name }}'
     - name: Store the distribution packages
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: python-package-distributions
+        name: >-
+          ${{ needs.pre-setup.outputs.dists-artifact-name }}
         # NOTE: Exact expected file names are specified here
         # NOTE: as a safety measure — if anything weird ends
         # NOTE: up being in this dir or not all dists will be
@@ -317,7 +267,12 @@ jobs:
         path: |
           dist/${{ needs.pre-setup.outputs.sdist-artifact-name }}
           dist/${{ needs.pre-setup.outputs.wheel-artifact-name }}
-        retention-days: 30
+        retention-days: >-
+          ${{
+            needs.pre-setup.outputs.release-requested == 'true'
+            && 90
+            || 30
+          }}
 
   lint:
     name: 🧹 Lint
@@ -337,35 +292,11 @@ jobs:
       with:
         python-version: >-
           3.10
-    - name: >-
-        Calculate Python interpreter version hash value
-        for use in the cache key
-      id: calc-cache-key-py
-      run: |
-        from hashlib import sha512
-        from os import environ
-        from sys import version
-        hash = sha512(version.encode()).hexdigest()
-        with open(environ['GITHUB_OUTPUT'], mode='a') as github_output:
-            print(f'py-hash-key={hash}', file=github_output)
-      shell: python
-    - name: Get pip cache dir
-      id: pip-cache-dir
-      run: >-
-        echo "dir=$(python -m pip cache dir)" >> "$GITHUB_OUTPUT"
     - name: Set up pip cache
-      uses: actions/cache@v3.3.1
+      uses: re-actors/cache-python-deps@810325a232f2a28ea124dfba85c7c72fd1774b38 # v1.0.0
       with:
-        path: ${{ steps.pip-cache-dir.outputs.dir }}
-        key: >-
-          ${{ runner.os }}-pip-${{
-          steps.calc-cache-key-py.outputs.py-hash-key }}-${{
-          needs.pre-setup.outputs.cache-key-files }}
-        restore-keys: |
-          ${{ runner.os }}-pip-${{
-              steps.calc-cache-key-py.outputs.py-hash-key
-          }}-
-          ${{ runner.os }}-pip-
+        cache-key-for-dependency-files: >-
+          ${{ needs.pre-setup.outputs.cache-key-for-dep-files }}
 
     - name: Grab the source from Git
       uses: actions/checkout@v3
@@ -373,9 +304,10 @@ jobs:
         ref: ${{ github.event.inputs.release-commitish }}
 
     - name: Download all the dists
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
-        name: python-package-distributions
+        name: >-
+          ${{ needs.pre-setup.outputs.dists-artifact-name }}
         path: dist/
 
     - name: Install build tools
@@ -416,7 +348,6 @@ jobs:
         os:
         - ubuntu-latest
         py:
-        - '3.7'
         - '3.8'
         - '3.9'
         - '3.10'
@@ -468,54 +399,11 @@ jobs:
       with:
         python-version: ${{ matrix.py }}
 
-    - name: Figure out if the interpreter ABI is stable
-      id: py-abi
-      run: |
-        from os import environ
-        from sys import version_info
-        is_stable_abi = version_info.releaselevel == 'final'
-        with open(environ['GITHUB_OUTPUT'], mode='a') as github_output:
-            print(
-                'is-stable-abi={is_stable_abi}'.
-                format(is_stable_abi=str(is_stable_abi).lower()),
-                file=github_output,
-            )
-      shell: python
-
-    - name: >-
-        Calculate Python interpreter version hash value
-        for use in the cache key
-      if: fromJSON(steps.py-abi.outputs.is-stable-abi)
-      id: calc-cache-key-py
-      run: |
-        from os import environ
-        from hashlib import sha512
-        from sys import version
-        hash = sha512(version.encode()).hexdigest()
-        with open(environ['GITHUB_OUTPUT'], mode='a') as github_output:
-            print('py-hash-key={hash}'.format(hash=hash), file=github_output)
-      shell: python
-
-    - name: Get pip cache dir
-      if: fromJSON(steps.py-abi.outputs.is-stable-abi)
-      id: pip-cache-dir
-      run: >-
-        echo "dir=$(python -m pip cache dir)" >> "$GITHUB_OUTPUT"
-
     - name: Set up pip cache
-      if: fromJSON(steps.py-abi.outputs.is-stable-abi)
-      uses: actions/cache@v3.3.1
+      uses: re-actors/cache-python-deps@810325a232f2a28ea124dfba85c7c72fd1774b38 # v1.0.0
       with:
-        path: ${{ steps.pip-cache-dir.outputs.dir }}
-        key: >-
-          ${{ runner.os }}-pip-${{
-          steps.calc-cache-key-py.outputs.py-hash-key }}-${{
-          needs.pre-setup.outputs.cache-key-files }}
-        restore-keys: |
-          ${{ runner.os }}-pip-${{
-              steps.calc-cache-key-py.outputs.py-hash-key
-          }}-
-          ${{ runner.os }}-pip-
+        cache-key-for-dependency-files: >-
+          ${{ needs.pre-setup.outputs.cache-key-for-dep-files }}
 
     - name: Update pip
       run: >-
@@ -535,9 +423,10 @@ jobs:
         rm -rf aiomysql
 
     - name: Download all the dists
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
-        name: python-package-distributions
+        name: >-
+          ${{ needs.pre-setup.outputs.dists-artifact-name }}
         path: dist/
 
     - name: Install dependencies
@@ -626,9 +515,9 @@ jobs:
 
     - name: Upload coverage
       if: ${{ github.event_name != 'schedule' }}
-      uses: codecov/codecov-action@v3.1.4
+      uses: codecov/codecov-action@v5.5.1
       with:
-        file: ./coverage.xml
+        files: ./coverage.xml
         flags: >-
           CI-GHA,
           OS-${{ runner.os }},
@@ -637,6 +526,7 @@ jobs:
           DB-${{ join(matrix.db, '-') }},
           ${{ matrix.os }}_${{ matrix.py }}_${{ join(matrix.db, '-') }}
         fail_ci_if_error: true
+        token: ${{ secrets.CODECOV_TOKEN }}
 
   check:  # This job does nothing and is only used for the branch protection
     if: always()
@@ -674,9 +564,10 @@ jobs:
 
     steps:
     - name: Download all the dists
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
-        name: python-package-distributions
+        name: >-
+          ${{ needs.pre-setup.outputs.dists-artifact-name }}
         path: dist/
     - name: >-
         Publish 🐍📦 ${{ needs.pre-setup.outputs.git-tag }} to PyPI
@@ -706,9 +597,10 @@ jobs:
 
     steps:
     - name: Download all the dists
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
-        name: python-package-distributions
+        name: >-
+          ${{ needs.pre-setup.outputs.dists-artifact-name }}
         path: dist/
     - name: >-
         Publish 🐍📦 ${{ needs.pre-setup.outputs.git-tag }} to TestPyPI
@@ -771,9 +663,10 @@ jobs:
         ref: ${{ github.event.inputs.release-commitish }}
 
     - name: Download all the dists
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
-        name: python-package-distributions
+        name: >-
+          ${{ needs.pre-setup.outputs.dists-artifact-name }}
         path: dist/
 
     - name: >-
