Add GHA CodeQL analyzer

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -20,7 +20,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ python ]
+        language:
+          - actions
+          - python
 
     steps:
       - name: Checkout
