Move docs requirements to separate file

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -20,6 +20,6 @@ formats:
 
 python:
   install:
-  - requirements: requirements-dev.txt
+  - requirements: requirements-docs.txt
   - method: pip
     path: .
